Updated AbstractDAO.